<resources>
    <string name="app_name">TeamWork</string>
    <string name="activity_name">Add/Edit Game Configuration</string>
    <string name="action_settings">Settings</string>

    <string name="list_games_activity_name">List of Added Games</string>
    <string name="no_games_msg">No games are currently present in this game configuration.
    To add a game, go back to the previous screen and click the add button!</string>
    <string name="achievement_level_zero">Achievement: Shiny Butterflies</string>
    <string name="achievement_level_one">Achievement: Busy Bees</string>
    <string name="achievement_level_two">Achievement: Adorable Chickens</string>
    <string name="achievement_level_three">Achievement: Fantastic Foxes</string>
    <string name="achievement_level_four">Achievement: Tactical Tigers</string>
    <string name="achievement_level_five">Achievement: Merciless Gorillas</string>
    <string name="achievement_level_six">Achievement: Rampaging Rhinoceros</string>
    <string name="achievement_level_seven">Achievement: Whooping Whales</string>
    <string name="achievement_level_eight">Achievement: Fire-breathing Dragons</string>
    <string name="date">Date: %1$d-%2$d-%3$d | %4$d:%5$d:%6$d</string>
    <string name="num_players"># of Players:\ </string>
    <string name="combined_score_colon">Combined Score:\ </string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string name="combined_score">Combined Score</string>
    <string name="achievement">Achievement:</string>
    <string name="add_a_new_game">Edit Game</string>
    <string name="view_list">View Game List</string>
    <string name="achievements">Achievements:</string>
    <string name="busy_bees">Busy Bees:</string>
    <string name="fantastic_foxes">Fantastic Foxes:</string>
    <string name="merciless_gorillas">Merciless Gorillas:</string>
    <string name="rampaging_rhinoceros">Rampaging Rhinoceros:</string>
    <string name="firebreathing_dragons">Firebreathing Dragons:</string>
    <string name="shiny_butterflies">Shiny Butterflies:</string>
    <string name="tactical_tigers">Tactical Tigers:</string>
    <string name="adorable_chickens">Adorable Chickens:</string>
    <string name="whooping_whales">Whooping Whales</string>
    <string name="dash">-</string>
    <string name="save">SAVE</string>
    <string name="hint_game_config_name">Name</string>
    <string name="hint_game_config_poor_score">Expected Poor Per-Player Score</string>
    <string name="hint_game_config_great_score">Expected Great Per-Player Score</string>
    <string name="invalid_score_toast_msg">Invalid Score</string>
    <string name="invalid_name_toast_msg">Invalid Name</string>
    <string name="delete_configuration">Delete Configuration</string>
    <string name="long_press_to_edit_a_game_config">Long Press to Edit a Game Config!</string>
    <string name="options">Options</string>
    <string name="themes">Themes</string>
    <string name="add_game_activity_title">Add/Edit Game Play Info</string>
    <string name="player_input_hint">Player %d</string>
    <string name="saved_game_toast">New Game Saved!</string>
    <string name="saved_game_err_toast">Please Finish Entering Inputs.</string>
    <string name="difficulty">Difficulty</string>
    <string name="celebration_msg">Great Achievement!</string>
    <string name="difficulty_easy">Difficulty: Easy</string>
    <string name="difficulty_medium">Difficulty: Medium</string>
    <string name="difficulty_hard">Difficulty: Hard</string>
    <string name="addNewGame">Add New Game</string>
    <string name="edit_game_by_long_pressing_an_item">Edit Game by Long Pressing an Item</string>
    <string name="view_stats">View Stats</string>
    <string name="achievement_stats_histogram_title">Frequency of Achievement Levels Earned</string>
    <string name="points_for_next_achievement">%d more points to reach the %s achievement!</string>
    <string name="change_the_app_theme">Change the app theme</string>
    <string name="highest_achievement">You earned the highest achievement!</string>
    <string name="take_photo">Take Photo</string>
    <string name="upload_image">UPLOAD IMAGE</string>
    <string name="References">
        <![CDATA[
    References for images:
    \n\n
    Butterfly: https://www.psdgraphics.com/file/butterfly-icon.jpg
    Bee: https://static.vecteezy.com/system/resources/previews/000/353/427/original/bee-vector-icon.jpg
    \n\n
    Chicken: https://cdn.iconscout.com/icon/free/png-512/chicken-1508799-1275252.png
    \n\n
    Fox: https://static.vecteezy.com/system/resources/previews/000/546/910/original/fox-face-logo-vector-icon.jpg
    \n\n
    Tiger: https://www.pngitem.com/pimgs/m/275-2755086_free-tiger-icon-png-325500-tiger-logo-png.png
    \n\n
    Gorilla: https://th.bing.com/th/id/OIP.Mq2lw-Zn7xYDR4AUVxp9IQHaHa?pid=ImgDet&rs=1
    \n\n
    Rhinoceros: https://static.vecteezy.com/system/resources/previews/000/583/432/original/rhinoceros-icon-vector.jpg
    \n\n
    Whale: https://th.bing.com/th/id/R.7e87f0462f020900344e24643af79331?rik=OqNVOBKExFJbiA&riu=http%3a%2f%2ficons.iconarchive.com%2ficons%2fgoogle%2fnoto-emoji-animals-nature%2f1024%2f22290-spouting-whale-icon.png&ehk=Jt2%2fESJUdVraNw3ETeI444nUXfTYA0H2dOZB%2foyXE%2b8%3d&risl=&pid=ImgRaw&r=0
    \n\n
    Dragon: https://www.kindpng.com/picc/m/13-137236_dragon-icon-png-fire-breathing-dragon-silhouette-transparent.png
    \n\n
    -------------
    \n\n
    weapon images
    \n\n
    -------------
    \n\n
    Toy stick: https://www.clipartkey.com/view/JhJxmR_twig-download-icon-twigs-png/
    \n\n
    Wooden staff: https://th.bing.com/th/id/R.fad1f0af41809c71635fc18c96d022d8?rik=QO77guLjTCzh2g&riu=http%3a%2f%2fep.yimg.com%2fay%2fyhst-91116643660013%2fwooden-weapon-hardwood-jo-staff-36-50-54-60-72-22.gif&ehk=qFjspAWVRSgr1MQRVy7EV3xD%2fSIEZJGzLcghfKVRl%2bs%3d&risl=&pid=ImgRaw&r=0
    \n\n
    Wooden sword: https://www.outfit4events.com/eur/product/6312-gladius-wooden-sword/
    \n\n
    Dagger: https://www.museumreplicas.com/camelot-damascus-dagger
    \n\n
    Shortsword: https://www.pinterest.com/pin/486951778449126299/
    \n\n
    Dual dagger: https://www.karatemart.com/skull-handle-double-daggers
    \n\n
    Broadsword: http://www.dragonsports.eu/en/11329-wushu-broadsword-metal-handle.html
    \n\n
    Excalibur: https://downloadfree3d.com/3d-models/weapons/sword/excalibur/
    \n\n
    Nuke: https://www.yoursurvivalguy.com/future-weapons/is-russias-failed-nuclear-powered-cruise-missile-worth-the-risk/
    \n\n
    ---------------
    \n\n
    resource images
    \n\n
    ---------------
    \n\n
    Dirt: http://www.freeiconspng.com/images/dirt-png
    \n\n
    Wood: https://openclipart.org/detail/20280/wood-icon
    \n\n
    Stone: https://iconscout.com/icon/stone-12
    \n\n
    Copper: https://www.pinclipart.com/pindetail/TmThmh_copper-png-clipart/
    \n\n
    Bronze: http://www.pngall.com/bronze-medal-png
    \n\n
    Quartz: https://clipground.com/quartz-logo-clipart.html
    \n\n
    Iron: https://www.pinclipart.com/maxpin/TJmRhR/
    \n\n
    Gold: http://www.iconexperience.com/v_collection/icons/?icon=gold_bars
    \n\n
    Diamond: https://freepngimg.com/png/13369-diamond-png-picture
    \n\n
    ---------------------------------------
    \n\n
    Achievement Celebration Fireworks Image:
    https://cdn3.iconfinder.com/data/icons/celebrations-flat-colorful/614/4652_-_Fireworks-512.png
    \n\n
    Youtube videos:
    https://www.youtube.com/watch?v=xZZQ5q5pOp0
    \n\n
    Android developer website:
    https://developer.android.com/training/camera-deprecated/photobasics]]></string>
    <string name="Reference">References for images: Butterfly: https://www.psdgraphics.com/file/butterfly-icon.jpg Bee: https://static.vecteezy.com/system/resources/previews/000/353/427/original/bee-vector-icon.jpg Chicken: https://cdn.iconscout.com/icon/free/png-512/chicken-1508799-1275252.png Fox: https://static.vecteezy.com/system/resources/previews/000/546/910/original/fox-face-logo-vector-icon.jpg Tiger: https://www.pngitem.com/pimgs/m/275-2755086_free-tiger-icon-png-325500-tiger-logo-png.png Gorilla: shorturl.at/opvM0 Rhinoceros: https://static.vecteezy.com/system/resources/previews/000/583/432/original/rhinoceros-icon-vector.jpg Whale: shorturl.at/kmuAJ Dragon: https://www.kindpng.com/picc/m/13-137236_dragon-icon-png-fire-breathing-dragon-silhouette-transparent.png ------------- weapon images ------------- Toy stick: https://www.clipartkey.com/view/JhJxmR_twig-download-icon-twigs-png/ Wooden staff: shorturl.at/eGLV8 Wooden sword: https://www.outfit4events.com/eur/product/6312-gladius-wooden-sword/ Dagger: https://www.museumreplicas.com/camelot-damascus-dagger Shortsword: https://www.pinterest.com/pin/486951778449126299/ Dual dagger: https://www.karatemart.com/skull-handle-double-daggers Broadsword: http://www.dragonsports.eu/en/11329-wushu-broadsword-metal-handle.html Excalibur: https://downloadfree3d.com/3d-models/weapons/sword/excalibur/ Nuke: https://www.yoursurvivalguy.com/future-weapons/is-russias-failed-nuclear-powered-cruise-missile-worth-the-risk/ --------------- resource images --------------- Dirt: http://www.freeiconspng.com/images/dirt-png Wood: https://openclipart.org/detail/20280/wood-icon Stone: https://iconscout.com/icon/stone-12 Copper: https://www.pinclipart.com/pindetail/TmThmh_copper-png-clipart/ Bronze: http://www.pngall.com/bronze-medal-png Quartz: https://clipground.com/quartz-logo-clipart.html Iron: https://www.pinclipart.com/maxpin/TJmRhR/ Gold: http://www.iconexperience.com/v_collection/icons/?icon=gold_bars Diamond: https://freepngimg.com/png/13369-diamond-png-picture --------------------------------------- Achievement Celebration Fireworks Image: https://cdn3.iconfinder.com/data/icons/celebrations-flat-colorful/614/4652_-_Fireworks-512.png Youtube videos: https://www.youtube.com/watch?v=xZZQ5q5pOp0 Android developer website: https://developer.android.com/training/camera-deprecated/photobasics</string>

</resources>